--- a/views/auth/register.templ
+++ b/views/auth/register.templ
@@ -4,8 +4,8 @@ import "github.com/iufb/goth/views/layouts"
 
 templ Register() {
 	@layouts.Layout() {
-		<form hx-post="/api/v1/register" hx-target="#res" hx-swap="innerHTML" class="flex flex-col gap-2 max-w-[500px]">
-			<input name="email" type="email" required/>
+		<form hx-post="/api/v1/register" hx-target="#res" hx-swap="outerHTML" class="flex flex-col gap-2 max-w-[500px]">
+			<input class="px-2 py-3 border-none text-2xl" name="email" type="email" required/>
 			<input name="password" type="password" required/>
 			<span id="res"></span>
 			<button type="submit">Register</button>
