--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -8,13 +8,23 @@ templ Layout() {
 			<link rel="icon" type="image/x-icon" href="/public/favicon.ico"/>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<link rel="stylesheet" href="/public/styles.css"/>
+			<link rel="stylesheet" href="/public/styles.css?v=1.0"/>
 			<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 			<script src="https://unpkg.com/alpinejs" defer></script>
 			<script src="https://unpkg.com/htmx.org@1.9.9" defer></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+			<script>
+            document.addEventListener("DOMContentLoaded", (event) => {
+                document.body.addEventListener("htmx:beforeSwap", function(evt) {
+                    if(evt.detail.xhr.status >= 422) {
+                        evt.detail.shouldSwap = true;
+                        evt.detail.isError = false;
+                    }
+                    })
+                })
+            </script>
 		</head>
-		<body class="antialiased flex items-center justify-center min-h-screen ">
+		<body class="antialiased flex  justify-center items-center min-h-screen">
 			{ children... }
 		</body>
 	</html>
