--- a/views/auth/register.templ
+++ b/views/auth/register.templ
@@ -1,14 +1,19 @@
 package auth
 
-import "github.com/iufb/goth/views/layouts"
+import (
+	"github.com/iufb/goth/views/layouts"
+	"github.com/iufb/goth/views/shared"
+)
 
 templ Register() {
 	@layouts.Layout() {
-		<form hx-post="/api/v1/register" hx-target="#res" hx-swap="outerHTML" class="flex flex-col gap-2 max-w-[500px]">
-			<input class="px-2 py-3 border-none text-2xl" name="email" type="email" required/>
-			<input name="password" type="password" required/>
-			<span id="res"></span>
-			<button type="submit">Register</button>
+		<form hx-post="/api/v1/register" hx-target="#res" hx-swap="outerHTML" class="flex flex-col gap-2  border p-5 rounded-md">
+			<h1 class="text-lg text-green-800 ">Welcome !</h1>
+			<input class="input" name="email" type="email" required/>
+			<input class="input" name="password" type="password" required/>
+			@shared.Dropdown("DropDown", []string{"One", "Two", "Three"})
+			<span id="res" class="text-red-500"></span>
+			<button class="uk-button uk-button-primary" type="submit">Register</button>
 		</form>
 	}
 }
