--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -9,14 +9,17 @@ templ Layout() {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/public/styles.css?v=1.0"/>
-			<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-			<script src="https://unpkg.com/alpinejs" defer></script>
+			<link
+				rel="stylesheet"
+				href="https://unpkg.com/franken-wc@0.0.6/dist/css/green.min.css"
+			/>
+			<script src="https://cdn.jsdelivr.net/npm/uikit@3.21.6/dist/js/uikit.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/uikit@3.21.6/dist/js/uikit-icons.min.js"></script>
 			<script src="https://unpkg.com/htmx.org@1.9.9" defer></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
 			<script>
             document.addEventListener("DOMContentLoaded", (event) => {
                 document.body.addEventListener("htmx:beforeSwap", function(evt) {
-                    if(evt.detail.xhr.status >= 422) {
+                    if(evt.detail.xhr.status >= 400 && evt.detail.xhr.status <=499) {
                         evt.detail.shouldSwap = true;
                         evt.detail.isError = false;
                     }
